# rdbms-playground

./: .editorconfig  .env.example  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  go.mod  nginx-deployment.yml  nginx-service.yml  openapi.yml
.github/workflows/: actionlint.yml  backend-image.yml  frontend-image.yml  workflow-check.yml
backend/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
backend-rs/: Cargo.toml
backend-rs/src/: main.rs
backend-rs/src/domain/: container.rs
backend-rs/src/domain/container/: error.rs  repository.rs  value_object.rs
backend-rs/src/domain/container/entity/: container.rs
backend-rs/src/domain/container/repository/: container_repository.rs
backend-rs/src/domain/container/value_object/: container_id.rs  container_image.rs
backend-rs/src/infrastructure/: docker.rs
backend-rs/src/infrastructure/docker/: container_repository_impl.rs
backend/client/: container_client.go  rdbms_client.go
backend/env/: env.go
backend/handler/: handler.go  playgrounds_handler.go  workspaces_handler.go
backend/model/: cotainer.go  db.go  execute_result.go  playground.go  workspace.go
backend/models/: cotainer.go  playground.go
backend/repositories/: playground_repository.go
backend/repository/: container_repository.go  db_repository.go  mysql_repository.go  playground_repository.go  postgres_repository.go  rdbms_repository.go
backend/runtime/: container.go
backend/runtime/example/: main.go
backend/runtime/misc/: init_db.sh
backend/service/: playground_service.go  workspace_service.go
backend/services/: playground_service.go
docs/: index.html
frontend/: .dockerignore  .eslintrc.js  Dockerfile  app.tsx  import_map.json  index.html  next.config.js  package.json  vite.config.ts
frontend/components/: Header.tsx  Playground.tsx
frontend/lib/api/: api.ts  util.ts
frontend/lib/components/terminal/: index.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/playground/: [id].tsx
frontend/pages/workspaces/: [id].tsx
frontend/src/: App.tsx  App.vue  main.ts
frontend/src/components/: Header.tsx  Header.vue  Playground.tsx  Playground.vue  Query.tsx  Result.tsx  Toolbar.tsx
frontend/style/: index.css
mysql-gateway/: Cargo.toml
mysql-gateway/src/: execute.rs  main.rs
nginx/conf.d/: default.conf
postgres-gateway/: Cargo.toml
postgres-gateway/src/: execute.rs  main.rs
rdbms-gateway/: Cargo.toml  build.rs
rdbms-gateway/proto/: rdbms-gateway.proto
rdbms-gateway/src/: database.rs  execute.rs  lib.rs  mysql.rs  postgres.rs  proto.rs  server.rs  sqlite.rs
rdbmspg/: Cargo.toml
rdbmspg/src/: domain.rs  main.rs
rdbmspg/src/domain/: docker.rs  query_result.rs  rdbms.rs
rdbmspg/src/infrastructure/: docker.rs
sqlite-gateway/: Cargo.toml
sqlite-gateway/src/: execute.rs  main.rs
