[package]
name = "rdbms-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
tonic = "0.7.2"
prost = "0.10.4"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls"] }

[build-dependencies]
tonic-build = "0.7.2"

[dev-dependencies]
tokio = { version = "1.19.1", features = ["macros"] }

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
