[package]
name = "rdbmspg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
axum = "0.5.8"
docker-api = "0.8.0"
futures = "0.3.21"
serde = "1.0.137"
sqlparser = "0.18.0"
sqlx = { version = "0.6.0", features = ["mysql", "postgres", "sqlite"] }
thiserror = "1.0.31"
# hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-postgres = "0.7.6"
# tower = "0.4.12"
