[package]
name = "sqlite-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.19.1", features = ["macros"] }
tonic = "0.7.2"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite"] }
rdbms-gateway = { path = "../rdbms-gateway", features = ["sqlite"] }
