[package]
name = "sqlite-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["macros"] }
tonic = "0.7.2"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite"] }
rdbms-gateway = { path = "../rdbms-gateway", features = ["sqlite"] }
